conversione vecchie pagine per profili

--- a/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/Raccolta-profili/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/Raccolta-profili/toc.yaml
@@ -2,3 +2,13 @@
   filename: RLOrganizationL1.page.md
 - name: RLOrganizationL2
   filename: RLOrganizationL2.page.md
+- name: RLOrganizationL3
+  filename: RLOrganizationL3.page.md
+- name: Practitioner
+  filename: Practitioner.page.md
+- name: PractitionerRole
+  filename: PractitionerRole.page.md
+- name: RLCarePlanProgettoIndividuale
+  filename: RLCarePlanProgettoIndividuale.page.md
+- name: RLParientCittadino
+  filename: RLParientCittadino.page.md
