--- a/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/Raccolta-profili/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/Raccolta-profili/toc.yaml
@@ -4,10 +4,10 @@
   filename: RLOrganizationL2.page.md
 - name: RLOrganizationL3
   filename: RLOrganizationL3.page.md
-- name: Practitioner
-  filename: Practitioner.page.md
-- name: PractitionerRole
-  filename: PractitionerRole.page.md
+- name: RLPractitioner
+  filename: RLPractitioner.page.md
+- name: RLPractitionerRole
+  filename: RLPractitionerRole.page.md
 - name: RLCarePlanProgettoIndividuale
   filename: RLCarePlanProgettoIndividuale.page.md
 - name: RLParientCittadino
