--- a/guides/IG-RL-sviluppo/Home/Esempi/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Esempi/toc.yaml
@@ -1,10 +1,12 @@
-- name: ASST della Brianza
-  filename: ASST-della-Brianza.page.md
-- name: Presidio Ospedaliero di Vimercate
-  filename: Presidio-Ospedaliero-di-Vimercate.page.md
-- name: Medicina specifica
-  filename: Medicina-specifica.page.md
-- name: Dr. Martino Rossi
-  filename: Martino-Rossi.page.md
-- name: Ruolo Dr. Martino Rossi
-  filename: Ruolo-Martino-Rossi.page.md
+- name: Index
+  filename: Index.page.md
+- name: esempio-RLOrganizationL1
+  filename: esempio-RLOrganizationL1.page.md
+- name: esempio-RLOrganizationL2
+  filename: esempio-RLOrganizationL2.page.md
+- name: esempio-RLOrganizationL3
+  filename: esempio-RLOrganizationL3.page.md
+- name: esempio-Practitioner
+  filename: esempio-Practitioner.page.md
+- name: esempio-PractitionerRole
+  filename: esempio-PractitionerRole.page.md
