aggiunte descrizioni profili

--- a/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Profili-ed-Estensioni/toc.yaml
@@ -2,3 +2,5 @@
   filename: Libreria-Profili.page.md
 - name: Libreria Estensioni
   filename: Libreria-Estensioni.page.md
+- name: Libreria Estensioni 2
+  filename: Libreria-Estensioni-2.page.md
