--- a/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
@@ -2,3 +2,5 @@
   filename: Panoramica-di-progetto.page.md
 - name: Tematiche di applicazione
   filename: Tematiche-di-applicazione
+- name: API
+  filename: API.page.md
