rinomica pagina errori

--- a/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
@@ -4,5 +4,5 @@
   filename: Tematiche-di-applicazione
 - name: API RESTful
   filename: API-RESTful.page.md
-- name: Errori 
-  filename: Errori.page.md
+- name: Stati ed Errori HTTP 
+  filename: Stati-ed-Errori-HTTP.page.md
