--- a/guides/IG-RL-test/guide.yaml
+++ b/guides/IG-RL-test/guide.yaml
@@ -1,5 +1,5 @@
 title: Progetto FHIR per Regione Lombardia - DRAFT
 description: This guide contains all the FHIR resources implemented for Regione Lombardia.
-version: 3.0.0-beta
+version: 3.0.0
 style-root: project
 style-name: RL-css
