--- a/guides/IG-RL-sviluppo/Home/Terminologia/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Terminologia/toc.yaml
@@ -1,5 +1,9 @@
 - name: CodeSystem e ValueSet
   filename: CodeSystem-e-ValueSet.page.md
+- name: Libreria ValueSet
+  filename: Libreria-ValueSet.page.md
+- name: Libreria CodeSystem
+  filename: Libreria-CodeSystem.page.md
 - name: ValueSets and CodeSystems
   filename: ValueSetsandCodeSystems.page.md
 - name: All ValueSets
