--- a/guides/IG-RL-draft/guide.yaml
+++ b/guides/IG-RL-draft/guide.yaml
@@ -1,5 +1,5 @@
 title: Progetto FHIR per Regione Lombardia - DRAFT
-description: This guide contains all the FHIR resources implemented for Regione Lombardia.
+description: Questa IG fa riferimento a integrazioni che non sono ancora in produzione.
 version: 3.0.0
 style-root: project
 style-name: RL-css
