--- a/guides/IG-RL-live/guide.yaml
+++ b/guides/IG-RL-live/guide.yaml
@@ -1,5 +1,5 @@
 title: Progetto FHIR per Regione Lombardia
-description: This guide contains all the FHIR resources implemented for Regione Lombardia.
+description: Questa IG fa riferimento a integrazioni che sono state rilasciate in produzione.
 version: 1.0.0
 style-root: project
 style-name: RL-css
