--- a/guides/IG-RL-sviluppo/guide.yaml
+++ b/guides/IG-RL-sviluppo/guide.yaml
@@ -1,5 +1,5 @@
 title: Progetto FHIR per Regione Lombardia - Sviluppo
-description: This guide contains all the FHIR resources implemented for Regione Lombardia.
+description: Questa IG fa riferimento all'ambiente di sviluppo.
 version: 2.5.1-beta
 style-root: project
 style-name: RL-css
