--- a/guides/IG-RL-draft/guide.yaml
+++ b/guides/IG-RL-draft/guide.yaml
@@ -1,5 +1,5 @@
 title: Progetto FHIR per Regione Lombardia - DRAFT
 description: Questa IG fa riferimento a integrazioni che non sono ancora in produzione.
-version: 3.2.2-beta
+version: 3.3.0
 style-root: project
 style-name: RL-css
