--- a/guides/IG-RL-live/Home/Contesto/toc.yaml
+++ b/guides/IG-RL-live/Home/Contesto/toc.yaml
@@ -2,3 +2,7 @@
   filename: Panoramica-di-progetto.page.md
 - name: Tematiche di applicazione
   filename: Tematiche-di-applicazione
+- name: API RESTful
+  filename: API-RESTful.page.md
+- name: Stati ed Errori
+  filename: Stati-ed-Errori.page.md
