--- a/guides/IG-RL-sviluppo/Home/Terminologia/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Terminologia/toc.yaml
@@ -1,4 +1,4 @@
 - name: Libreria ValueSet
   filename: Libreria-ValueSet.page.md
-- name: Anagrafica Schede Valutazione 
+- name: Anagrafiche Schede Valutazione 
   filename: Anagrafica-Schede-Valutazione.page.md
