Revert "allineamento simplifier"
This reverts commit d048b9261ad3516b5340c5b8451089b8acaa0fab.

--- a/guides/IG-RL-versionhistory/Home/toc.yaml
+++ b/guides/IG-RL-versionhistory/Home/toc.yaml
@@ -1,6 +1,4 @@
-- name: SGDT 
+- name: Index
   filename: Index.page.md
 - name: Version History PLO
   filename: PLO.page.md
-- name: Version History OMr
-  filename: OMr.page.md
