Correzioni a capo (simili)

--- a/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
+++ b/guides/IG-RL-sviluppo/Home/Contesto/toc.yaml
@@ -3,6 +3,6 @@
 - name: Tematiche di applicazione
   filename: Tematiche-di-applicazione
 - name: Paradigmi di comunicazione e API FHIR
-  filename: Paradigmi di comunicazione e API FHIR.page
+  filename: Paradigmi-di-comunicazione-e-API-FHIR.page.md
 - name: Stati ed Errori
   filename: Stati-ed-Errori.page.md
