--- a/guides/IG-RL-draft/Home/Contesto/toc.yaml
+++ b/guides/IG-RL-draft/Home/Contesto/toc.yaml
@@ -2,7 +2,7 @@
   filename: Panoramica-di-progetto.page.md
 - name: Tematiche di applicazione
   filename: Tematiche-di-applicazione
-- name: Paradigmi di comunicazione e API FHIR
-  filename: Paradigmi-di-comunicazione-e-API-FHIR.page.md
+- name: Paradigmi di comunicazione e API RESTful
+  filename: Paradigmi-di-comunicazione-e-API-RESTful.page.md
 - name: Stati ed Errori
   filename: Stati-ed-Errori.page.md
