--- a/guides/IG-FHIR-per-Movimentazione-Paziente-Sviluppo/Home/Contesto/toc.yaml
+++ b/guides/IG-FHIR-per-Movimentazione-Paziente-Sviluppo/Home/Contesto/toc.yaml
@@ -1,5 +1,5 @@
 - name: Panoramica di progetto
-  filename: Panoramica-di-progetto.page.md
+  filename: Panoramica-di-progetto
 - name: Tematiche di applicazione
   filename: Tematiche-di-applicazione
 - name: Paradigmi di comunicazione e API RESTful
