--- a/guides/Progetto-FHIR-Dati-di-Laboratorio-Sviluppo/Home/Contesto/toc.yaml
+++ b/guides/Progetto-FHIR-Dati-di-Laboratorio-Sviluppo/Home/Contesto/toc.yaml
@@ -1,5 +1,5 @@
 - name: Panoramica di progetto
-  filename: Panoramica-di-progetto.page.md
+  filename: Panoramica-di-progetto
 - name: Paradigmi di comunicazione e API RESTful
   filename: Paradigmi-di-comunicazione-e-API-RESTful.page.md
 - name: Stati ed Errori
