--- a/guides/IG-RL-draft/guide.yaml
+++ b/guides/IG-RL-draft/guide.yaml
@@ -1,5 +1,5 @@
-title: Progetto FHIR per Regione Lombardia - DRAFT
+title: Guida Implementativa FHIR per SGDT - DRAFT
 description: Questa IG fa riferimento a integrazioni che non sono ancora in produzione.
-version: 3.13.3
+version: 3.13.4
 style-root: project
 style-name: RL-css
