--- a/guides/IG-RL-live/guide.yaml
+++ b/guides/IG-RL-live/guide.yaml
@@ -1,5 +1,5 @@
-title: Progetto FHIR per Regione Lombardia
+title: Guida Implementativa FHIR per SGDT
 description: Questa IG fa riferimento a integrazioni che sono state rilasciate in produzione.
-version: 3.10.0
+version: 3.10.1
 style-root: project
 style-name: RL-css
