--- a/guides/IG-RL-sviluppo/guide.yaml
+++ b/guides/IG-RL-sviluppo/guide.yaml
@@ -1,5 +1,5 @@
-title: Progetto FHIR per Regione Lombardia - Sviluppo
+title: Guida Implementativa FHIR per SGDT - Sviluppo
 description: Questa IG fa riferimento all'ambiente di sviluppo.
-version: 3.13.3
+version: 3.13.4
 style-root: project
 style-name: RL-css
