--- a/guides/IG-RL-sviluppo/guide.yaml
+++ b/guides/IG-RL-sviluppo/guide.yaml
@@ -3,3 +3,4 @@ description: Questa IG fa riferimento all'ambiente di sviluppo.
 version: 3.13.5
 style-root: project
 style-name: RL-css
+numbered-headings: false
