--- a/guides/cdr-ldo-sviluppo/guide.yaml
+++ b/guides/cdr-ldo-sviluppo/guide.yaml
@@ -1,6 +1,8 @@
 title: IG FHIR Lettera di dimissione
 description: 
 version: 
-style-root: styles
-style-name: treetable
-numbered-headings: false
+#style-root: styles
+#style-name: treetable
+#numbered-headings: false
+style-root: project
+style-name: RL-css
